[package]
name = "tbcli"
version = "0.1.1"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7.0"
argparse = "0.2.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"